--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 html,
 body {
     height: 100%;
-    overflow: hidden;
 }
 
 body {
@@ -15,31 +14,9 @@ body {
     position: relative;
     font-family: Arial, sans-serif;
     scroll-behavior: smooth;
+    min-height: 100vh;
 }
 
-/* Background Circles */
-/* body::before,
-    body::after {
-      content: "";
-      position: absolute;
-      background-color: rgba(255, 235, 205, 0.5);
-      border-radius: 50%;
-      z-index: -1;
-    }
-    
-    body::before {
-      width: 300px;
-      height: 300px;
-      top: -150px;
-      right: -150px;
-    }
-    
-    body::after {
-      width: 200px;
-      height: 200px;
-      bottom: -100px;
-      left: -100px;
-    } */
 body::before,
 body::after,
 .circle-blue-1,
