--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -30,10 +30,10 @@ body::after {
 }
 
 .spinner {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   border: 5px solid #ccc;
-  border-top-color: #4caf50;
+  border-top-color: #8e5b34;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
@@ -60,6 +60,7 @@ body::after {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  min-height: 100vh;
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
@@ -128,12 +129,13 @@ body::after {
 
 /* Top Products Section */
 .top-products-section {
-  display: flex;flex-direction: column;
-  
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  margin: 50px auto;
+  margin: 20px ;
   padding: 20px;
   max-width: 1200px;
+  min-height: 70vh;
 }
 
 .top-products-section h2 {
@@ -145,7 +147,7 @@ body::after {
 .products-grid {
   display: flex; 
   flex-direction: row;
-  gap: 20px;
+  gap: 100px;
   justify-content: center;
   align-items: center;
 }
@@ -159,6 +161,7 @@ body::after {
   transition: transform 0.3s;
   min-width: 200px;
   flex-shrink: 0;
+
 }
 
 .product-card:hover {
