--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
     min-height: 100vh;
 }
 
-body::before,
-body::after,
+.login-form-container::before,
+.login-form-container::after,
 .circle-blue-1,
 .circle-blue-2 {
     content: "";
@@ -27,25 +27,22 @@ body::after,
     z-index: -1;
 }
 
-body::before {
+.login-form-container::before {
     width: 90px;
     height: 90px;
-    top: 140px;
-    right: 130px;
+    top: 80px;
+    right: 80px;
     background-color: rgba(255, 235, 205, 0.5);
-    /* Existing beige color */
 }
 
-body::after {
+.login-form-container::after {
     width: 200px;
     height: 200px;
-    bottom: -50px;
-    left: -100px;
+    bottom: 10px;
+    left: -80px;
     background-color: rgba(255, 235, 205, 0.5);
-    /* Existing beige color */
 }
 
-/* Additional Blue Circles */
 .circle-blue-1 {
     width: 50px;
     height: 50px;
@@ -55,16 +52,15 @@ body::after {
     position: absolute;
 }
 
-/* .circle-blue-2 {
+.circle-blue-2 {
     width: 180px;
     height: 180px;
     bottom: 5%;
-    right: -80px;
+    right: 80px;
     background-color: rgba(173, 216, 230, 0.5);
     position: absolute;
-} */
+}
 
-/* App Container (replaces container-fluid min-vh-100 d-flex align-items-center) */
 .app-container {
     min-height: 100vh;
     display: flex;
@@ -74,17 +70,16 @@ body::after {
     color: HSL(30, 10%, 15%);
 }
 
-/* Main Layout (replaces row w-100) */
+
 .main-layout {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    /* Replaces col-md-8 and col-md-4 */
     width: 100%;
     max-width: 1200px;
     gap: 20px;
 }
 
-/* Welcome Section (replaces col-md-8 d-flex align-items-center justify-content-center) */
+
 .welcome-section {
     display: flex;
     align-items: center;
@@ -92,7 +87,7 @@ body::after {
     padding: 20px;
 }
 
-/* Login Section (replaces col-md-4 d-flex align-items-center justify-content-center) */
+
 .login-section {
     display: flex;
     align-items: center;
@@ -326,7 +321,6 @@ body::after {
     background-color: #d4edda;
     /* Green background for success */
     color: #155724;
-    /* Dark green text */
     border: 1px solid #c3e6cb;
     /* Border for success */
     border-radius: 8px;
@@ -349,6 +343,38 @@ body::after {
 .content p {
     color: #555;
     font-size: 1.2rem;
+}
+
+
+
+@media (max-width: 1024px) {
+    body::before {
+        width: 70px;
+        height: 70px;
+        top: 50px;
+        right: 50px;
+    }
+
+    body::after {
+        width: 150px;
+        height: 150px;
+        bottom: 0;
+        left: -50px;
+    }
+
+    .circle-blue-1 {
+        width: 40px;
+        height: 40px;
+        top: 8%;
+        left: 50px;
+    }
+
+    /* .circle-blue-2 {
+        width: 140px;
+        height: 140px;
+        bottom: 5%;
+        right: 50px;
+    } */
 }
 
 
@@ -386,8 +412,8 @@ body::after {
     body::before {
         width: 60px;
         height: 60px;
-        top: 80px;
-        right: 40px;
+        top: 240px;
+        right: 10px;
     }
 
     body::after {
@@ -400,16 +426,16 @@ body::after {
     .circle-blue-1 {
         width: 30px;
         height: 30px;
-        top: 10%;
-        left: 20px;
+        top: 2%;
+        left: 8px;
     }
 
-    .circle-blue-2 {
+    /* .circle-blue-2 {
         width: 110px;
         height: 110px;
         bottom: 3%;
         right: -50px;
-    }
+    } */
 }
 
 @media (min-width: 768px) {
@@ -417,4 +443,35 @@ body::after {
         padding-left: 3rem;
         /* Shift content to the right on larger screens */
     }
+}
+
+
+@media (max-width: 480px) {
+    body::before {
+        width: 50px;
+        height: 50px;
+        top: 200px;
+        right: 5px;
+    }
+
+    body::after {
+        width: 100px;
+        height: 100px;
+        bottom: -40px;
+        left: -10px;
+    }
+
+    .circle-blue-1 {
+        width: 25px;
+        height: 25px;
+        top: 3%;
+        left: 5px;
+    }
+
+    /* .circle-blue-2 {
+        width: 90px;
+        height: 90px;
+        bottom: 2%;
+        right: -30px;
+    } */
 }
