--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,7 +11,6 @@
   align-items: center;
   min-height: 100vh;
   background-color: #fffdfa;
-  /* Navbar text color */
   padding-top: 70px;
   /* Account for fixed Navbar */
   overflow-x: hidden;
@@ -34,7 +33,6 @@
   height: 80px;
   border: 9px solid #ccc;
   border-top-color: #f1ae7e;
-  /* Navbar hover color */
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
@@ -59,6 +57,7 @@
 }
 
 .content-wrapper {
+  /* background-color: #ffffff; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -211,8 +210,8 @@
 }
 
 .product-card img {
-  width: 220px;
-  height: 220px;;
+  width: 240px;
+  height: 240px;;
   object-fit: cover;
   border-radius: 8px;
 }
