--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -169,7 +169,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #554840;
+     /* background-color: #554840;  */
+     background: linear-gradient(to right, #e0e0e0, #ffaf7b);
     padding: 10px 20px;
     color: #ffffff;
     font-weight: bold;
@@ -194,14 +195,22 @@
     color: #007bff;
 }
 
+.woof {
+    /* color: rgba(255, 225, 185, 1); */
+    color: rgb(142, 91, 52);
+}
+
+.nibbles {
+    /* color: rgba(108, 200, 255, 1); */
+    color: rgb(108, 200, 255);
+}
+
 .nav-items {
     display: flex;
 }
 
 .nav-items ul {
     display: flex;
-    /* justify-content: end; */
-    /* align-items: center; */
     list-style: none;
     margin: 0 auto;
     padding: 0;
@@ -222,7 +231,8 @@
 }
 
 .nav-items a:hover {
-    color: #f1ae7e;
+    /* color: #f1ae7e; */
+    color: rgb(255, 180, 150);
 }
 
 .nav-items a.active {
@@ -258,6 +268,7 @@
 .logout-button:hover {
     transform: scale(1.1);
     background-color: #ff5c5c;
+    /* background-color: rgb(255, 150, 120); */
 }
 
 .logout-icon {
@@ -277,7 +288,8 @@
 }
 
 .hamburger:hover {
-    color: #007bff;
+    /* color: #007bff; */
+    color: rgb(80, 180, 255);
 }
 
 
