--- a/src/styles/ProductList.css
+++ b/src/styles/ProductList.css
@@ -38,7 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden; /* Ensures no unwanted overflow */
+    overflow: hidden; /* no unwanted overflow */
 }
 
 .product-image {
@@ -94,7 +94,7 @@
 
 .feature-item {
     color: #4a5568;
-    font-size: 0.8rem; /* Smaller text */
+    font-size: 0.8rem; 
     margin-bottom: 6px;
     display: flex;
     align-items: center;
